@@ -7,6 +7,7 @@ Version 1.5.7
        trash bin instead of leaving them. (Stefan)
 - BUG: Deleting an item in the repository browser that had non-ascii chars
        in it didn't work. (Stefan)
+- BUG: TortoiseMerge showed a black line diff in one-pane view. (Stefan)
 
 Version 1.5.6
 - CHG: Disabled capieng again - users were annoyed. (Stefan)
